Update all dependencies, fix test run